fix color-picker z-index

--- a/src/styles/colorPicker.scss
+++ b/src/styles/colorPicker.scss
@@ -1,12 +1,15 @@
+#color_picker {
+  left: 1em;
+  position: absolute;
+  top: 1em;
+}
+
 .color_picker_button {
   background-color: #00ff00;
   background-image: url("../img/color_picker.png");
   background-size: cover;
   border: none;
   height: 4em;
-  left: 1em;
-  position: absolute;
-  top: 1em;
   width: 4em;
 }
 
